2016-09-30  Adhemerval Zanella  <adhemerval.zanella@linaro.org>

	[BZ #18241]
	[BZ #20181]
	* libio/Makefile (test): Add tst-memstream3 and tst-wmemstream3.
	* libio/memstream.c (_IO_mem_sync): Only append a null byte if
	write position is at the end the buffer.
	* libio/wmemstream.c (_IO_wmem_sync): Likewise.
	* libio/strops.c (_IO_str_switch_to_get_mode): New function.
	(_IO_str_seekoff): Set correct offset from negative displacement and
	set EINVAL for invalid ones.
	* libio/wstrops.c (enlarge_userbuf): Use correct function to calculate
	buffer length.
	(_IO_wstr_switch_to_get_mode): New function.
	(_IO_wstr_seekoff): Set correct offset from negative displacement and
	set EINVAL for invalid ones.
	* libio/tst-memstream3.c: New file.
	* libio/tst-wmemstream3.c: Likewise.
	* manual/examples/memstrm.c: Remove warning when priting size_t.

2016-09-30  Joseph Myers  <joseph@codesourcery.com>

	* sysdeps/ieee754/dbl-64/dla.h [__FP_FAST_FMA] (DLA_FMS): Define
	macro to use __builtin_fma.
	* sysdeps/x86_64/fpu/dla.h: Remove file.

	* sysdeps/ieee754/ldbl-128ibm/bits/iscanonical.h
	[__NO_LONG_DOUBLE_MATH] (__iscanonicall): Do not declare.
	[__NO_LONG_DOUBLE_MATH] (iscanonical): Define to evaluate to 1.

2016-09-30  Carlos O'Donell  <carlos@redhat.com>

	[BZ #20292]
	* elf/Makefile (routines): Add dl-addr-obj.
	[ifeq (yesyes,$(have-fpie)$(build-shared))] (tests): Add
	tst-_dl_addr_inside_object.
	[ifeq (yesyes,$(have-fpie)$(build-shared))] (tests-pie): Likewise.
	[ifeq (yesyes,$(have-fpie)$(build-shared))]
	($(objpfx)tst-_dl_addr_inside_object): Add $(objpfx)dl-addr-obj.os.
	[ifeq (yesyes,$(have-fpie)$(build-shared))]
	(CFLAGS-tst-_dl_addr_inside_object.c): Add $(PIE-ccflag).
	* elf/dl-addr.c: Remove _dl_addr_inside_object function.
	* elf/dl-open.c: Likewise.
	* elf/dl-addr-obj.c: New file.
	* elf/tst-_dl_addr_inside_object.c: New file.

2016-09-30  Joseph Myers  <joseph@codesourcery.com>

	* math/math.h [__GLIBC_USE (IEC_60559_BFP_EXT)]: Include
	<bits/iscanonical.h>.